@@ -9,6 +9,7 @@ Version 1.3.15+svn:
    * display reloaded games in yellow instead of green in the game list
      as they are also a kind of already running games
    * Made era not required while loading save game
+   * Fixed control change when giving own team (bug #6639)
  * miscellaneous and bug fixes:
    * Moved destruction of conditional object before the mutex. This should 
      fix random crash in network disconnect.
